--- a/index.css
+++ b/index.css
@@ -6,5 +6,7 @@ width: 100px;
 }
 #K1{
     background-image:url ("deadpool.jpg");
-    
+    background-size:cover;
+    background-repeat: no repeat;
+    position: absolute;
 }
