--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ height: 100px;
 width: 100px;
 }
 #K1{
-    background-image:url ("deadpool.png");
+    background-image:url ("d.png");
     background-size:cover;
     background-repeat: no repeat;
     position: absolute;
